src/snapshots/rmcp_openapi__tool_generator__tests__extract_output_schema_with_2xx_response.snap
---
source: src/tool_generator.rs
expression: result
---
{
  "additionalProperties": false,
  "description": "Unified response structure with success and error variants",
  "properties": {
    "body": {
      "description": "Response body - either success data or error information",
      "oneOf": [
        {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        {
          "description": "Error response structure for tool execution failures",
          "properties": {
            "error": {
              "description": "Execution errors that occur during tool execution\nThese return as Ok(CallToolResult { is_error: true })",
              "oneOf": [
                {
                  "description": "HTTP error response from the API",
                  "properties": {
                    "details": {
                      "description": "Optional structured error details from API"
                    },
                    "message": {
                      "description": "Error message or response body",
                      "type": "string"
                    },
                    "status": {
                      "description": "HTTP status code",
                      "format": "uint16",
                      "maximum": 65535,
                      "minimum": 0,
                      "type": "integer"
                    },
                    "type": {
                      "const": "http-error",
                      "type": "string"
                    }
                  },
                  "required": [
                    "type",
                    "status",
                    "message"
                  ],
                  "type": "object"
                },
                {
                  "description": "Network/connection failures",
                  "properties": {
                    "category": {
                      "description": "Network error categories for better error handling",
                      "oneOf": [
                        {
                          "const": "timeout",
                          "description": "Request timeout",
                          "type": "string"
                        },
                        {
                          "const": "connect",
                          "description": "Connection error (DNS, refused, unreachable)",
                          "type": "string"
                        },
                        {
                          "const": "request",
                          "description": "Request construction/sending error",
                          "type": "string"
                        },
                        {
                          "const": "body",
                          "description": "Response body error",
                          "type": "string"
                        },
                        {
                          "const": "decode",
                          "description": "Response decoding error",
                          "type": "string"
                        },
                        {
                          "const": "other",
                          "description": "Other network errors",
                          "type": "string"
                        }
                      ]
                    },
                    "message": {
                      "description": "Description of the network failure",
                      "type": "string"
                    },
                    "type": {
                      "const": "network-error",
                      "type": "string"
                    }
                  },
                  "required": [
                    "type",
                    "message",
                    "category"
                  ],
                  "type": "object"
                },
                {
                  "description": "Response parsing failed",
                  "properties": {
                    "raw_response": {
                      "description": "Raw response body for debugging",
                      "type": [
                        "string",
                        "null"
                      ]
                    },
                    "reason": {
                      "description": "Description of the parsing failure",
                      "type": "string"
                    },
                    "type": {
                      "const": "response-parsing-error",
                      "type": "string"
                    }
                  },
                  "required": [
                    "type",
                    "reason"
                  ],
                  "type": "object"
                }
              ]
            }
          },
          "required": [
            "error"
          ],
          "type": "object"
        }
      ]
    },
    "status": {
      "description": "HTTP status code",
      "maximum": 599,
      "minimum": 100,
      "type": "integer"
    }
  },
  "required": [
    "status",
    "body"
  ],
  "type": "object"
}
