src/snapshots/rmcp_openapi__tool_generator__tests__test_array_with_prefix_items_integration.snap
---
source: src/tool_generator.rs
expression: result
---
{
  "description": "X,Y coordinates as tuple",
  "items": {
    "type": "number"
  },
  "maxItems": 2,
  "minItems": 2,
  "type": "array"
}
